
Wice::Defaults::DATEPICKER_YEAR_RANGE added to the config to define the default year range in Datepicker (https://github.com/leikind/wice_grid/issues/61)

support for Ruby 2.0

<caption> supported

2 js errors fixed in the Saved Queries UI ( https://github.com/leikind/wice_grid/issues/89

helpers filter_and_order_state_as_hash(grid) and filter_state_as_hash(grid)

3.2.1

action_column can now also take a block. If the block returns a falsy value, no checkbox will be rendered.

A fix: the css class submitted to column is also added to the <th> tags of the column.

Filter related code has been refactored: condition generators are unified together with view column processors into one module. Writing your own filters has been simplified.

The default filter for numeric columns has been replaced by a simple one field filter which checks the values for equality, not the inclusion in a range.
New column parameter :filter_type allows to load custom alternative filters.
The old numeric range filter can still be used by specifying filter_type: :range. See lib/columns/column_processor_index.rb for the list of available filters.

3.2.0

Fixes:
https://github.com/leikind/wice_grid/issues/83
https://github.com/leikind/wice_grid/issues/82

action_column can now also take a block. If the block returns a falsy value, no checkbox will be rendered

A fix: the css class submitted to column is also added to <th> tags of the column

Filter related code has been refactored: condition generators are unified together with view column processors into one module. Writing your own filters has been simplified.

The default filter for numeric columns has been replaced by a simple one field filter which checks the values for equality, not the inclusion in a range.
New column parameter :filter_type allows to load custom alternative filters. The old numeric range filter can still be used by specifying  filter_type: :range.